build: optimize Dockerfiles and docker-compose configuration
Backend Dockerfile:
- Remove verbose comments for cleaner Dockerfile
- Add healthcheck for container health monitoring
- Improve layer caching by removing unnecessary comments

Frontend Dockerfile:
- Remove verbose comments
- Add healthcheck for nginx container
- Optimize layer structure

docker-entrypoint.sh:
- Replace inefficient db push check with Prisma Client connection test
- More reliable database readiness check
- Remove verbose comments

docker-compose.dev.yml:
- Add healthcheck for backend service
- Enables better service dependency management

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,60 +1,41 @@
-# Multi-stage build for backend
-
-# Stage 1: Build
 FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-# Install OpenSSL and other required libraries for Prisma
 RUN apk add --no-cache openssl openssl-dev libc6-compat
 
-# Copy package files
 COPY package*.json ./
 COPY tsconfig.json ./
 
-# Install dependencies
 RUN npm install
 
-# Copy source code
 COPY prisma ./prisma
 COPY src ./src
 
-# Generate Prisma Client
 RUN npx prisma generate
-
-# Build TypeScript
 RUN npm run build
 
-# Stage 2: Production
 FROM node:18-alpine
 
 WORKDIR /app
 
-# Install OpenSSL and other required libraries for Prisma
 RUN apk add --no-cache openssl openssl-dev libc6-compat
 
-# Copy package files
 COPY package*.json ./
-
-# Install all dependencies (including dev dependencies for Prisma)
-# Prisma needs to be available to generate the client
 RUN npm install
 
-# Copy built files from builder
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/prisma ./prisma
 
-# Regenerate Prisma Client in production stage with the correct version
 RUN npx prisma generate
-
-# Remove dev dependencies after generating Prisma Client
 RUN npm prune --production
 
-# Copy entrypoint script
 COPY docker-entrypoint.sh ./
 RUN chmod +x docker-entrypoint.sh
 
 EXPOSE 3000
+HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:3000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
 ENTRYPOINT ["./docker-entrypoint.sh"]
 CMD ["node", "dist/server.js"]
