--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,38 +1,24 @@
-# Multi-stage build for frontend
-
-# Stage 1: Build
 FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-# Copy package files
 COPY package*.json ./
-COPY tsconfig.json ./
-COPY tsconfig.node.json ./
-COPY vite.config.ts ./
-COPY tailwind.config.js ./
-COPY postcss.config.js ./
-
-# Install dependencies
 RUN npm install
 
-# Copy source code
+COPY tsconfig.json tsconfig.node.json vite.config.ts tailwind.config.js postcss.config.js ./
 COPY index.html ./
 COPY src ./src
 
-# Build the application
 RUN npm run build
 
-# Stage 2: Production with nginx
 FROM nginx:alpine
 
-# Copy built files from builder
 COPY --from=builder /app/dist /usr/share/nginx/html
-
-# Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD wget --quiet --tries=1 --spider http://localhost/ || exit 1
 
 CMD ["nginx", "-g", "daemon off;"]
 
