--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -39,6 +39,12 @@ services:
     networks:
       - notes-network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      interval: 30s
+      timeout: 3s
+      start_period: 40s
+      retries: 3
 
   frontend:
     build:
