refactor: remove verbose comments and simplify .env.example files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,18 +1,11 @@
-# Database Configuration
-# Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public
-# For local development with Docker Compose:
-DATABASE_URL="postgresql://notes_user:notes_password@localhost:5432/notes_db?schema=public"
+# Database connection string
+DATABASE_URL=postgresql://notes_user:notes_password@localhost:5432/notes_db?schema=public
 
-# For local development without Docker (if running PostgreSQL locally):
-# DATABASE_URL="postgresql://postgres:postgres@localhost:5432/notes_db?schema=public"
+# JWT Secret Key (required)
+JWT_SECRET=your-secret-key-change-in-production
 
-# JWT Secret Key (REQUIRED)
-# Generate a strong secret key for production
-# You can generate one with: openssl rand -base64 32
-JWT_SECRET="your-secret-key-change-in-production"
-
-# Server Port (optional, defaults to 3000)
+# Server port (optional, defaults to 3000)
 PORT=3000
 
-# Node Environment (optional, defaults to development)
+# Node environment (optional, defaults to development)
 NODE_ENV=development
