--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,3 @@
-# API Base URL
-# For local development with Docker Compose (using nginx proxy):
-# Leave empty or unset to use default '/api' (proxied via nginx)
-
-# For local development without Docker (direct connection to backend):
-# VITE_API_URL="http://localhost:3000/api"
-
-# For production/staging:
-# VITE_API_URL="https://api.yourdomain.com/api"
+# API base URL (optional, defaults to /api for nginx proxy)
+# For direct backend connection: http://localhost:3000/api
+VITE_API_URL=/api
