chore: add .cursorignore to gitignore and add API_PREFIX to backend .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,7 @@ PORT=3000
 
 # Node environment (optional, defaults to development)
 NODE_ENV=development
+
+# API base path prefix (optional, defaults to /api)
+API_PREFIX=/api
+
