feat: add VITE_FRONTEND_PREFIX environment variable and dynamic API proxy configuration

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,8 @@
 # API base URL (optional, defaults to /api for nginx proxy)
 # For direct backend connection: http://localhost:3000/api
 VITE_API_URL=/api
+
+# Frontend base path prefix (optional, defaults to empty string for root)
+# Examples: /staging, /production, /dev
+# If set to /staging, all routes will be prefixed (e.g., /staging/login, /staging/notes)
+VITE_FRONTEND_PREFIX=/
