--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,4 +5,5 @@ VITE_API_URL=/api
 # Frontend base path prefix (optional, defaults to empty string for root)
 # Examples: /staging, /production, /dev
 # If set to /staging, all routes will be prefixed (e.g., /staging/login, /staging/notes)
-VITE_FRONTEND_PREFIX=/
+# Leave empty or omit for root deployment
+VITE_FRONTEND_PREFIX=
