--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,12 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
+ARG VITE_FRONTEND_PREFIX=/
+ARG VITE_API_URL=/api
+
+ENV VITE_FRONTEND_PREFIX=${VITE_FRONTEND_PREFIX}
+ENV VITE_API_URL=${VITE_API_URL}
+
 COPY package*.json ./
 RUN npm install
 
@@ -21,4 +27,3 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD wget --quiet --tries=1 --spider http://localhost/ || exit 1
 
 CMD ["nginx", "-g", "daemon off;"]
-
