--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,6 +9,17 @@ server {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
+    location ^~ /staging/assets/ {
+        alias /usr/share/nginx/html/assets/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    location ^~ /staging/ {
+        alias /usr/share/nginx/html/;
+        try_files $uri $uri/ /index.html;
+    }
+
     location / {
         try_files $uri $uri/ /index.html;
     }
