fix: configure Swagger UI static assets to work behind nginx reverse proxy

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -20,6 +20,20 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Proxy Swagger UI static assets (swagger-ui-express serves them at root level)
+    location ~ ^/(swagger-ui|favicon\.ico) {
+        proxy_pass http://backend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # API proxy - must come before static file location to catch /api/api-docs/* requests
     location /api {
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
@@ -32,12 +46,13 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # Static files - only for non-API paths
+    location ~* ^/(?!api).*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+    }
+
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
