fix: configure Swagger UI at /api-docs with relative server URLs for nginx proxy

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -20,8 +20,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy Swagger UI static assets (swagger-ui-express serves them at root level)
-    location ~ ^/(swagger-ui|favicon\.ico) {
+    # Swagger UI proxy - independent of API prefix
+    location /api-docs {
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -33,7 +33,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # API proxy - must come before static file location to catch /api/api-docs/* requests
+    # API proxy - handles all /api/* requests
     location /api {
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
@@ -46,8 +46,8 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Static files - only for non-API paths
-    location ~* ^/(?!api).*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # Static files - only for non-API and non-api-docs paths
+    location ~* ^/(?!api|api-docs).*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
