--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -20,6 +20,26 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Redirect /api-docs to /api/api-docs for convenience (local development only)
+    # In AWS, ALB routes /staging/api* and /api* directly to backend, so this is never hit
+    location = /api-docs {
+        return 301 /api/api-docs$is_args$args;
+    }
+
+    # API proxy for local Docker Compose - routes /api/* to backend service
+    # Note: In AWS, ALB routes /staging/api* and /api* directly to backend, so these blocks are never hit
+    location /api {
+        proxy_pass http://backend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     location / {
         try_files $uri $uri/ /index.html;
     }
