fix: use variable-based proxy_pass with resolver to prevent AWS startup failure
- Add resolver directive with public DNS (8.8.8.8) for hostname resolution
- Use variable-based proxy_pass to defer DNS resolution to request time
- Prevents nginx startup failure in AWS when 'backend' hostname doesn't exist
- Works in both Docker Compose (resolves backend:3000) and AWS (blocks never hit due to ALB routing)
- Fixes 'host not found in upstream' error in AWS staging frontend

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -28,8 +28,12 @@ server {
 
     # API proxy for local Docker Compose - routes /api/* to backend service
     # Note: In AWS, ALB routes /staging/api* and /api* directly to backend, so these blocks are never hit
+    # Using resolver and variable to defer DNS resolution to request time (prevents startup failure in AWS)
+    # Variable-based proxy_pass defers DNS resolution, so nginx won't fail if 'backend' hostname doesn't exist
     location /api {
-        proxy_pass http://backend:3000;
+        resolver 8.8.8.8 valid=30s ipv6=off;
+        set $backend_upstream http://backend:3000;
+        proxy_pass $backend_upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
